Pull #263: pack checkstyle fatjar from maven cache, then upgrade version only need change pom.xml

--- a/net.sf.eclipsecs.checkstyle/build.properties
+++ b/net.sf.eclipsecs.checkstyle/build.properties
@@ -1,6 +1,6 @@
 bin.includes = META-INF/,\
                .,\
                license/,\
-               checkstyle-8.35-all.jar
+               checkstyle-all.jar
 jars.compile.order = .
 source.. = metadata/
