--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 8.38.0",
+    "template": "partials/releases/8.38.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 8.37.0",
     "template": "partials/releases/8.37.0/release_notes.html",
     "open": true
