--- a/net.sf.eclipsecs.core/build.properties
+++ b/net.sf.eclipsecs.core/build.properties
@@ -8,6 +8,7 @@ bin.includes = .,\
                schema/,\
                core.properties,\
                lib/dom4j-2.1.3.jar, \
+               lib/reflections-0.9.10.jar, \
                lib/snakeyaml-1.26.jar, \
                lib/checkstyle-8.44-all.jar
                
