infra: move all Travis big blocks to special shell script

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,16 +48,8 @@ matrix:
         - CMD="mvn install && git diff"
 
 script:
-  - |
-    MVN_SETTINGS=${TRAVIS_HOME}/.m2/settings.xml
-    if [[ -f ${MVN_SETTINGS} ]]; then
-      if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-        sed -i'' -e "/<mirrors>/,/<\/mirrors>/ d" $MVN_SETTINGS
-      else
-        xmlstarlet ed --inplace -d "//mirrors" $MVN_SETTINGS
-      fi
-    fi
-    echo "eval of CMD is starting";
-    echo "CMD=$CMD";
-    eval $CMD;
-    echo "eval of CMD is completed";
+  - ./.ci/travis.sh init-m2-repo
+  - echo "eval of CMD is starting";
+  - echo "CMD=$CMD";
+  - eval $CMD;
+  - echo "eval of CMD is completed";
