--- a/net.sf.eclipsecs.core/.classpath
+++ b/net.sf.eclipsecs.core/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/dom4j-2.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/snakeyaml-1.26.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javassist-3.28.0-GA.jar"/>
 	<classpathentry kind="lib" path="lib/checkstyle-9.1-all.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
