Issue #337: Remove version number from feature description

--- a/net.sf.eclipsecs-feature/feature.properties
+++ b/net.sf.eclipsecs-feature/feature.properties
@@ -5,7 +5,7 @@ feature.provider_name = Eclipse Checkstyle Plugin Development Team
 
 updateSiteName = Eclipse Checkstyle Plug-in Updates
 
-description.text = This feature integrates Checkstyle 8 into the Eclipse environment.
+description.text = This feature integrates Checkstyle into Eclipse.
 description.url = http://checkstyle.org/eclipse-cs/
 
 copyright.text =\
