--- a/docs/releases.json
+++ b/docs/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 9.3.0",
+    "template": "partials/releases/9.3.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 9.2.1",
     "template": "partials/releases/9.2.1/release_notes.html",
     "open": true
