--- a/net.sf.eclipsecs-updatesite/pom.xml
+++ b/net.sf.eclipsecs-updatesite/pom.xml
@@ -136,9 +136,9 @@
                         <configuration>
                             <repositories>
                                 <repository>
-                                    <id>juno</id>
+                                    <id>2019-06</id>
                                     <layout>p2</layout>
-                                    <url>https://download.eclipse.org/releases/juno</url>
+                                    <url>https://download.eclipse.org/releases/2019-06</url>
                                 </repository>
                             </repositories>
                             <dependencies>
