Issue #304: Use shared PNG icons
Fixes #304 and #305 by using the platform icons instead of local copies.

--- a/net.sf.eclipsecs.ui/plugin.xml
+++ b/net.sf.eclipsecs.ui/plugin.xml
@@ -471,7 +471,7 @@
                     id="net.sf.eclipsecs.action.purgecaches"
                     class="net.sf.eclipsecs.ui.actions.PurgeCachesAction"
                     toolbarPath="Normal/ZCheckstyle"
-                    icon="icons/refresh.gif"
+                    icon="platform:/plugin/org.eclipse.search/icons/full/elcl16/refresh.png"
                     label="%PurgeCaches.label"
                     tooltip="%PurgeCaches.tooltip" mode="FORCE_TEXT">
                 </action>
