--- a/net.sf.eclipsecs.core/.classpath
+++ b/net.sf.eclipsecs.core/.classpath
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins">
 		<accessrules>
 			<accessrule kind="accessible" pattern="com/puppycrawl/tools/checkstyle/meta/**"/>
 		</accessrules>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/dom4j-2.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/snakeyaml-1.33.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javassist-3.28.0-GA.jar"/>
 	<classpathentry kind="lib" path="lib/checkstyle-10.4-all.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
