--- a/pom.xml
+++ b/pom.xml
@@ -236,16 +236,9 @@
                     <groupId>org.eclipse.tycho</groupId>
                     <artifactId>tycho-p2-plugin</artifactId>
                     <version>${tycho-version}</version>
-                    <configuration>
-                        <!-- <baselineRepositories> -->
-                        <!-- <repository> -->
-                        <!-- <url>git://git.code.sf.net/p/eclipse-cs/git</url> -->
-                        <!-- </repository> -->
-                        <!-- </baselineRepositories> -->
-                    </configuration>
                     <executions>
                         <execution>
-                            <id>attached-p2-metadata</id>
+                            <id>attach-p2-metadata</id>
                             <phase>package</phase>
                             <goals>
                                 <goal>p2-metadata</goal>
@@ -264,6 +257,12 @@
                     <version>${tycho-version}</version>
                     <configuration>
                         <strictSrcIncludes>false</strictSrcIncludes>
+                        <excludes>
+                            <!-- These are bundles and feature that do not have a corresponding source version; NOT the ones 
+                                that we do not want source versions -->
+                            <plugin id="net.sf.eclipsecs.branding" />
+                            <plugin id="net.sf.eclipsecs.doc" />
+                        </excludes>
                     </configuration>
                     <executions>
                         <execution>
@@ -272,12 +271,13 @@
                                 <goal>plugin-source</goal>
                             </goals>
                         </execution>
+                        <execution>
+                            <id>feature-source</id>
+                            <goals>
+                                <goal>feature-source</goal>
+                            </goals>
+                        </execution>
                     </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.eclipse.tycho.extras</groupId>
-                    <artifactId>tycho-source-feature-plugin</artifactId>
-                    <version>${tycho-version}</version>
                 </plugin>
                 <!-- Disable default deployer. -->
                 <plugin>
