--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <name>eclipse-cs Maven Parent</name>
 
     <modules>
-        <module>net.sf.eclipsecs.target</module>
         <module>net.sf.eclipsecs.branding</module>
         <module>net.sf.eclipsecs.checkstyle</module>
         <module>net.sf.eclipsecs.core</module>
@@ -88,11 +87,7 @@
                 <version>${tycho-version}</version>
                 <configuration>
                     <target>
-                        <artifact>
-                            <groupId>net.sf.eclipsecs</groupId>
-                            <artifactId>net.sf.eclipsecs.target</artifactId>
-                            <version>${project.version}</version>
-                        </artifact>
+                        <file>${basedir}/../net.sf.eclipsecs.target/net.sf.eclipsecs.target.target</file>
                     </target>
                     <resolver>p2</resolver>
                     <environments>
@@ -258,7 +253,7 @@
                     <configuration>
                         <strictSrcIncludes>false</strictSrcIncludes>
                         <excludes>
-                            <!-- These are bundles and feature that do not have a corresponding source version; NOT the ones 
+                            <!-- These are bundles and feature that do not have a corresponding source version; NOT the ones
                                 that we do not want source versions -->
                             <plugin id="net.sf.eclipsecs.branding" />
                             <plugin id="net.sf.eclipsecs.doc" />
