supplemental: fix all Eclipse IDE warnings
* Have all available preferences in jdt.core.prefs and pde.prefs to
ensure JDT and PDE compiler settings are version controlled
* set most compiler warnings to error to avoid re-introducing any of
them
* ignore all deprecation warnings, they are not fixable when we want to
remain compatible with old Eclipse versions
* fix all remaining warnings
* add lifecycle mapping for Eclipse m2e to avoid Maven lifecycle mapping
warnings

--- a/net.sf.eclipsecs.checkstyle/build.properties
+++ b/net.sf.eclipsecs.checkstyle/build.properties
@@ -4,3 +4,4 @@ bin.includes = META-INF/,\
                checkstyle-10.3.3-all.jar
 jars.compile.order = .
 source.. = metadata/
+javacDefaultEncoding.. = UTF-8
