--- a/net.sf.eclipsecs.core/build.properties
+++ b/net.sf.eclipsecs.core/build.properties
@@ -12,4 +12,5 @@ bin.includes = .,\
                lib/checkstyle-10.3.3-all.jar
                
 source.. = src/
+javacDefaultEncoding.. = UTF-8
 
