--- a/net.sf.eclipsecs.ui/build.properties
+++ b/net.sf.eclipsecs.ui/build.properties
@@ -12,3 +12,4 @@ jars.compile.order = .
 source.. = src/
 additional.bundles = org.eclipse.jdt.core,\
                      org.eclipse.core.runtime
+javacDefaultEncoding.. = UTF-8
