--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 10.4.0",
+    "template": "partials/releases/10.4.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 10.3.4",
     "template": "partials/releases/10.3.4/release_notes.html",
     "open": true
