Sort properties and fix some typos

--- a/net.sf.eclipsecs.sample/src/net/sf/eclipsecs/sample/checks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.sample/src/net/sf/eclipsecs/sample/checks/checkstyle-metadata.properties
@@ -1,4 +1,3 @@
-MyCustomChecks.desc = A beautiful description for my collection of custom Checkstyle modules.
-
+MethodLimit.desc = Checks that the number of methods of a class does not exceed a configured maximum
 MethodLimit.name = Method Limit
-MethodLimit.desc = Checks that the number of methods of a class does not exeed a configured maximum
+MyCustomChecks.desc = A beautiful description for my collection of custom Checkstyle modules.
