--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,6 @@ jobs:
 
     - name: Build with Maven
       run: mvn --errors --no-transfer-progress install
+
+    - name: Difference Check
+      run: ./.ci/validation.sh git-diff
