Infra: Use Maven wrapper
The Maven wrapper allows running Maven without it being installed, and
to specify the version being used. That way all developers and CI
systems can use the same version easily.

Travis supports mvnw:
https://docs.travis-ci.com/user/languages/java/#maven-dependency-management

As a developer, use "./mvnw goals" instead of "mvn goals" in the future,
please.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         java-version: 11
 
     - name: Build with Maven
-      run: mvn --errors --no-transfer-progress install
+      run: ./mvnw --errors --no-transfer-progress install
 
     - name: Difference Check
       run: ./.ci/validation.sh git-diff
